create new account form #1 - Resolved
I have set up conditions for creating a new user (username and password).

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <div id="contentDiv">
     </div>
-    <footer>My Footer</footer>
+    <footer>I Can Only Show You The Log In Page. You're The One That Has To Log In.</footer>
     <script src="scripts.js"></script>
 </body>
 
