--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <div id="contentDiv">
     </div>
-    <footer>I Can Only Show You The Log In Page. You're The One That Has To Log In.</footer>
+    <footer>I can only show you the log in page. You're the one that has to log in through it.</footer>
     <script src="scripts.js"></script>
 </body>
 
