--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page Assignment</title>
     <link rel="stylesheet" href="main.css">
-
+    <script src="scripts.js" defer type="module"></script>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <div id="contentDiv">
     </div>
     <footer>I can only show you the log in page. You're the one that has to log in through it.</footer>
-    <script src="scripts.js"></script>
+
 </body>
 
 </html>
