Can now go back to "home page" by clicking on the logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <header>
-        <h1>Enter the Matrix</h1>
+        <div id="logoDiv">
+            <h1>Enter the Matrix</h1>
+        </div>
         <div id="headerDiv">
         </div>
     </header>
