--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     </header>
     <div id="contentDiv">
     </div>
-    <footer>I can only show you the log in page. You're the one that has to log in through it.</footer>
+    <footer>
+        <div id="footerContent">
+            I can only show you the log in page. You're the one that has to log in through it.
+        </div>
+    </footer>
+
 
 </body>
 
